store file to Amazon S3
